@@ -53,7 +53,7 @@ PUSHPATH = -eval '(push "./" load-path)'
 DEPSRCS=	bbdb-com.el bbdb-print.el bbdb-anniv.el \
 		bbdb-migrate.el \
 		bbdb-mua.el bbdb-message.el bbdb-rmail.el \
-		bbdb-gnus.el bbdb-mhe.el bbdb-vm.el
+		bbdb-gnus.el bbdb-mhe.el bbdb-vm.el bbdb-sc.el
 
 DEPBINS=	${DEPSRCS:.el=.elc}
 SRCS=		bbdb.el  $(DEPSRCS)
@@ -117,6 +117,9 @@ bbdb-mhe.elc:	bbdb.elc bbdb-com.elc bbdb-mua.elc bbdb-mhe.el
 bbdb-vm.elc:	bbdb.elc bbdb-com.elc bbdb-mua.elc bbdb-vm.el
 	@$(emacs) $(PUSHPATH) $(VM) \
 		-f batch-byte-compile $(@:.elc=.el)
+bbdb-sc.elc:	bbdb.elc bbdb-com.elc bbdb-mua.elc bbdb-sc.el
+	@$(emacs) $(PUSHPATH) \
+		-f batch-byte-compile $(@:.elc=.el)
 
 bbdb-print.elc:	bbdb.elc bbdb-com.elc bbdb-print.el
 	@$(emacs) $(PUSHPATH) \
@@ -136,7 +139,7 @@ autoloads: bbdb-loaddefs.el
 bbdb:	bbdb-loaddefs.el bbdb.elc bbdb-com.elc bbdb-print.elc \
 	bbdb-anniv.elc bbdb-migrate.elc bbdb-mua.elc \
 	bbdb-message.elc bbdb-rmail.elc bbdb-gnus.elc bbdb-mhe.elc \
-	bbdb-ispell.elc
+	bbdb-sc.elc bbdb-ispell.elc
 vm:	bbdb-vm.elc
 
 install-el: all
