@@ -1,4 +1,9 @@
 2012-12-30  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb-sc.el: New file
+	* lisp/Makefile.in, lisp/makefile-temp, lisp/bbdb.el
+	(bbdb-init-forms, bbdb-initialize): Use it.
+
+2012-12-30  Roland Winkler  <winkler@gnu.org>
 	* INSTALL: List all BBDB configure options.
 	* aclocal.m4, tex/Makefile.in: Option --with-tex-dir renamed from
 	--with-texmf-dir.
